precompiles/utils/macro/tests/compile-fail/precompile/discriminant/too-many-arguments.stderr
error: The discriminant function must return an DiscriminantResult<_> (no type alias)
  --> tests/compile-fail/precompile/discriminant/too-many-arguments.rs:25:48
   |
25 |     fn discriminant(address: H160, other: u32) -> Option<u32> {
   |                                                   ^^^^^^
